# MediaHarbor

./: .gitignore  AGENTS.md  AGENT_READ_ME_FIRST.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check.yml
docs/: adoption-guide.md  repository-settings.md
download-tools/: README.md  THIRD_PARTY_NOTICES.md  routing.json  tool-metadata.json  tools.json
scripts/: README.md  assemble_release.py  test_validate_pr_body.py  validate.ps1  validate.sh  validate_pr_body.py
skill/mediaharbor/: SKILL.md
skill/mediaharbor/references/: capability-matrix.md  downloader-support.md  error-handling.md  security.md
skill/mediaharbor/scripts/: _common.py  acquisition.py  check_tools.py  download.py  ffprobe_validator.py  locate_root.py  orchestrator.py  probe.py  process_runner.py  project.py  report.py  router.py  safe_path.py  ytdlp_adapter.py
skill/mediaharbor/scripts/backends/: gallery_dl.py  n_m3u8dl_re.py  streamlink.py  yutto.py
tests/: conftest.py  test_acquisition.py  test_backend_contracts.py  test_check_tools.py  test_e2e.py  test_ffprobe_validator.py  test_orchestrator.py  test_process_runner.py  test_project.py  test_readme_identity.py  test_registry.py  test_release_assembly.py  test_release_layout.py  test_report.py  test_root_location.py  test_router.py  test_ytdlp_adapter.py
tests/fixtures/: fake_ytdlp.py
