[project]
name = "mediaharbor"
version = "0.1.0"
description = "Portable video material collection toolkit for AI agents"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
